<resources>
    <string name="app_name">EasyPetVet</string>
    <string name="cadastrar_animal">Cadastrar Animal</string>
    <string name="nome">Nome</string>
    <string name="especie">Espécie</string>
    <string name="raca">Raça</string>
    <string name="idade">Idade</string>
	<string name="cpf_dono">CPF do Dono</string>
	<string name="id">ID (Tabela)</string>
    <string name="salvar">Salvar</string>
	<string name="editar">Editar</string>
	<string name="apagar">Apagar</string>
	<string name="listar">Listar</string>
    <string name="buscar">Buscar</string>
	<string name="novaConsulta">Nova Consulta</string>
    <string name="campos_obrigatorios">Preencha todos os campos obrigatórios!</string>
    <string name="animal_cadastrado">Animal cadastrado com sucesso!</string>
    <string name="animais">Animais</string>
    <string name="consultas">Consultas</string>
    <string name="adicionar_consulta">Adicionar Consulta</string>
    <string name="voltar">Voltar</string>
	<string name="historico">Histórico</string>
    <string name="inicio">Bem Vindo ao EasyPetVet!</string>
	<string name="tela_animal">Informações do Animal</string>
	<string name="tela_consulta">Informações da Consulta</string>
	<string name="tela_historico">Consultas do Animal</string>
	<string name="data">Data (DD/MM/AA)</string>
	<string name="descricao">Descrição</string>
	<string name="emergencia">Emergencia</string>
    <string name="rotina">Rotina</string>
    <string name="prioridade">Prioridade</string>
    <string name="motivo_emergencia">Motivo da Emergência</string>
    <string name="tempo_estimado_atendimento">Tempo Estimado de Atendimento</string>
    <string name="recorrencia">Recorrência</string>
    <string name="checklist_saude">Checklist de Saúde</string>
    <string name="proxima_consulta">Próxima Consulta</string>
	<string name="consulta_emergencia">Consulta de Emergencia</string>
	<string name="consulta_rotina">Consulta de Rotina</string>
</resources>
