<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".FragmentAnimais">

    <!-- Título do Fragment -->
    <TextView
        android:id="@+id/tvTituloAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tela_animal"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo Nome -->
    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#a0f0a4"
        android:hint="@string/nome"
        android:padding="12dp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloAnimal" />

    <!-- Campo Espécie -->
    <EditText
        android:id="@+id/editTextEspecie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#a0f0a4"
        android:hint="@string/especie"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <!-- Campo Raça -->
    <EditText
        android:id="@+id/editTextRaca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#a0f0a4"
        android:hint="@string/raca"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEspecie" />

    <!-- Campo Idade -->
    <EditText
        android:id="@+id/editTextIdade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#a0f0a4"
        android:hint="@string/idade"
        android:inputType="number"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRaca" />

    <!-- Campo CPF Dono -->
    <EditText
        android:id="@+id/editTextCpfDono"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:backgroundTint="#a0f0a4"
        android:hint="@string/cpf_dono"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/buttonListar"
        app:layout_constraintStart_toEndOf="@+id/buttonListar"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdade" />

    <!-- Botoes CRUD -->
    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4ebf5d"
        android:padding="12dp"
        android:text="@string/salvar"
        android:textColor="#4E342E"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonListar"
        app:layout_constraintEnd_toStartOf="@+id/buttonListar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonListar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4ebf5d"
        android:padding="12dp"
        android:text="@string/listar"
        android:textColor="#4E342E"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonApagar"
        app:layout_constraintEnd_toStartOf="@+id/buttonApagar"
        app:layout_constraintStart_toEndOf="@+id/buttonSalvar" />

    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#f44336"
        android:padding="12dp"
        android:text="@string/apagar"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditar"
        app:layout_constraintStart_toEndOf="@+id/buttonListar"
        app:layout_constraintTop_toBottomOf="@+id/editTextCpfDono" />

    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ff9800"
        android:padding="12dp"
        android:text="@string/editar"
        android:textColor="#424242"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonApagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonApagar" />

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#ff9800"
        android:padding="12dp"
        android:text="@string/buscar"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSalvar" />

    <TextView
        android:id="@+id/tvListaAnimais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:scrollbars="vertical"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>