<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical"
    tools:context=".FragmentDetalhesConsulta">

    <!-- Título do Fragment -->
    <TextView
        android:id="@+id/tvTituloConsultas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tela_consulta"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spAnimais"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloConsultas"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo Data -->
    <EditText
        android:id="@+id/editTextData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4B4B4B"
        android:hint="@string/data"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spAnimais" />

    <!-- Campo Descricao -->
    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4B4B4B"
        android:hint="@string/descricao"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextData" />

    <!-- Campo Prioridade (para Consulta Emergência) -->
    <EditText
        android:id="@+id/editTextPrioridade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4B4B4B"
        android:hint="@string/prioridade"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDescricao"
        android:visibility="gone" /> <!-- Inicialmente invisível -->

    <!-- Campo Tempo Estimado Atendimento (para Consulta Emergência) -->
    <EditText
        android:id="@+id/editTextTempoEstimadoAtendimento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4B4B4B"
        android:hint="@string/tempo_estimado_atendimento"
		android:inputType="number"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPrioridade"
        android:visibility="gone" /> <!-- Inicialmente invisível -->

    <!-- Campo Recorrência (para Consulta Rotina) -->
    <EditText
        android:id="@+id/editTextRecorrencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4B4B4B"
        android:hint="@string/recorrencia"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTempoEstimadoAtendimento"
        android:visibility="gone" /> <!-- Inicialmente invisível -->

    <!-- Campo Próxima Consulta (para Consulta Rotina) -->
    <EditText
        android:id="@+id/editTextProximaConsulta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4B4B4B"
        android:hint="@string/proxima_consulta"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRecorrencia"
        android:visibility="gone" /> <!-- Inicialmente invisível -->

    <!-- Botões CRUD -->
    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4ebf5d"
        android:padding="12dp"
        android:text="@string/editar"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/editTextProximaConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonListar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#5BC0DE"
        android:padding="12dp"
        android:text="@string/listar"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/buttonEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNovaConsulta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFAA00"
        android:padding="12dp"
        android:text="@string/novaConsulta"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/buttonListar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#ff4c4c"
        android:padding="12dp"
        android:text="@string/apagar"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/buttonNovaConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>