<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical"
    tools:context=".FragmentListarConsultas">

    <EditText
        android:id="@+id/editTextBuscarId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
		android:inputType="number"
        android:padding="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
		android:id="@+id/buttonBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0074D9"
        android:padding="12dp"
        android:text="@string/buscar"
        android:textColor="#ffffff"
		app:layout_constraintTop_toBottomOf="@+id/editTextBuscarId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
		
		    <!-- Tipos Consulta -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuscar"
        app:layout_constraintEnd_toEndOf="parent" >

        <RadioButton
            android:id="@+id/radioEmergencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergencia" />

        <RadioButton
            android:id="@+id/radioRotina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotina" />
    </RadioGroup>

    <ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:paddingStart="16dp"
		android:paddingEnd="16dp" 
		android:fillViewport="true"
		app:layout_constraintTop_toBottomOf="@+id/radioGroup"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<TextView
			android:id="@+id/tvListaConsultas"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="16dp"
			android:textColor="#000000"
			android:scrollbars="vertical"
			android:textSize="16sp"
			android:lineSpacingExtra="4dp"
			android:textStyle="bold" 
			android:background="@drawable/borda_preta"
			android:gravity="center|start"
			android:textAlignment="viewStart"
			android:justificationMode="inter_word"/>
	</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
